--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>TicTacToe</title>
+    
 </head>
 <body>
+
+    <table>
+        <tr>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+        </tr>
+        <tr>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+        </tr>
+        <tr>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+            <td><img class="img d-none" src="/img/circle.png">
+                <img class="img d-none" src="/img/cross.png">
+            </td>
+        </tr>
+    </table>
     
 </body>
 </html>
