--- a/index.html
+++ b/index.html
@@ -13,36 +13,45 @@
 
     <table>
         <tr>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
+            <td onclick="fillShape(1)">
+                <img id="circal-1" class="img d-none" src="/img/circle.png">
+                <img id="cross-1" class="img d-none" src="/img/cross.png">
             </td>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
+            <td onclick="fillShape(2)">
+                <img id="circal-2" class="img d-none" src="/img/circle.png">
+                <img id="cross-2" class="img d-none" src="/img/cross.png">
             </td>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
-            </td>
-        </tr>
-        <tr>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
-            </td>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
-            </td>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
+            <td onclick="fillShape(3)">
+                <img id="circal-3" class="img d-none" src="/img/circle.png">
+                <img id="cross-3" class="img d-none" src="/img/cross.png">
             </td>
         </tr>
         <tr>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
+            <td onclick="fillShape(4)">
+                <img id="circal-4" class="img d-none" src="/img/circle.png">
+                <img id="cross-4" class="img d-none" src="/img/cross.png">
             </td>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
+            <td onclick="fillShape(5)">
+                <img id="circal-5" class="img d-none" src="/img/circle.png">
+                <img id="cross-5" class="img d-none" src="/img/cross.png">
             </td>
-            <td><img class="img d-none" src="/img/circle.png">
-                <img class="img d-none" src="/img/cross.png">
+            <td onclick="fillShape(6)">
+                <img id="circal-6" class="img d-none" src="/img/circle.png">
+                <img id="cross-6" class="img d-none" src="/img/cross.png">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="fillShape(7)">
+                <img id="circal-7" class="img d-none" src="/img/circle.png">
+                <img id="cross-7" class="img d-none" src="/img/cross.png">
+            </td>
+            <td onclick="fillShape(8)">
+                <img id="circal-8" class="img d-none" src="/img/circle.png">
+                <img id="cross-8" class="img d-none" src="/img/cross.png">
+            </td>
+            <td onclick="fillShape(9)">
+                <img id="circal-9" class="img d-none" src="/img/circle.png">
+                <img id="cross-9" class="img d-none" src="/img/cross.png">
             </td>
         </tr>
     </table>
